Add style for logo in Recent Jobs widget

--- a/assets/css/job-listings.less
+++ b/assets/css/job-listings.less
@@ -116,6 +116,21 @@ ul.job_listings {
 			a {
 				padding: 1em 0;
 			}
+			.image{
+				width: 3em;
+				height: 3em;
+				position: absolute;
+				float: left;
+				vertical-align: middle;
+
+				img{
+					left: 0;
+				}
+			}
+			.content{
+				float:right;
+				padding: 0 0 0 50px;
+			}
 			.position {
 				float: none;
 				width: auto;
