Check if logo is enabled in widget

--- a/assets/css/job-listings.less
+++ b/assets/css/job-listings.less
@@ -117,19 +117,15 @@ ul.job_listings {
 				padding: 1em 0;
 			}
 			.image{
-				width: 3em;
-				height: 3em;
-				position: absolute;
 				float: left;
-				vertical-align: middle;
 
 				img{
 					left: 0;
+					position: relative;
 				}
 			}
 			.content{
-				float:right;
-				padding: 0 0 0 50px;
+				overflow: hidden;
 			}
 			.position {
 				float: none;
