Add salary field

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -332,6 +332,10 @@ div.job_listings {
 			.display-icon;
 			content: '\e80e';
 		}
+		.salary:before {
+			.display-icon;
+			content: '\e800';
+		}
 	}
 	.job_description {
 		margin: 0 0 1.5em;
