Add initial attribute editing

--- a/assets/blocks/jobs/style.scss
+++ b/assets/blocks/jobs/style.scss
@@ -2,4 +2,9 @@
 	.job_listings .job_filters .job_types li {
 		list-style-type: none;
 	}
+
+	.attributes-edit {
+		background: #f9f9f9;
+		padding: 1em 2em;
+	}
 }
