remove hard-coded reference to spinner.gif

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -197,7 +197,7 @@
 		cursor: not-allowed;
 	}
 	.spinner {
-		background: url(../../../../../wp-includes/images/spinner.gif) no-repeat;
+		background-repeat: no-repeat;
 		background-size: 20px 20px;
 		display: inline-block;
 		visibility: hidden;
