HTML and CSS Alignments

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -246,6 +246,12 @@ div.job_listings {
 				margin-left: 1em;
 			}
 		}
+        .category {
+            margin: 0 0 0 3em;
+            padding: 0 0 0 1em;
+            line-height: 1.5em;
+            float: right;
+        }
 		.tagline {
 			display: block;
 			margin: 0 0 0 42px;
