Add job search submission button

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -438,6 +438,9 @@ div.job_listings {
 				clear: both;
 				width: 100%;
 			}
+			&.search_submit {
+				padding-top: .5em;
+			}
 			.showing_jobs {
 				a {
 					padding: .25em;
