Fix company logo extending outside parent

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -227,6 +227,7 @@ div.job_listings {
 		clear: both;
 		min-height: 3em;
 		box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+		box-sizing: content-box;
 
 		img {
 			width: 3em;
