--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -263,24 +263,32 @@ div.job_listings {
 			.display-icon;
 			content: '\e80a';
 		}
+		.company_facebook:before {
+			.display-icon;
+			content: '\e80c';
+		}
+		.company_linkedin:before {
+			.display-icon;
+			content: '\e80b';
+		}
 		.company_video {
 			border-top: 1px solid #eee;
 			padding: 1em 0 0;
 			margin: 1em 0 0 0;
-    		position: relative;
-    		padding-bottom: 56.25%;
-    		padding-top: 30px;
-    		height: 0;
-    		overflow: hidden;
+			position: relative;
+			padding-bottom: 56.25%;
+			padding-top: 30px;
+			height: 0;
+			overflow: hidden;
 			iframe,
 			object,
 			embed {
-			    position: absolute;
-			    top: 0;
-			    left: 0;
-			    width: 100%;
-			    height: 100%;
-			    margin: 0;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				margin: 0;
 				display: block;
 			}
 		}
