Set dashboard size to site content width

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -647,7 +647,7 @@ div.job_listings {
 }
 
 #job-manager-job-dashboard {
-	max-width: 100vw;
+	max-width: 100%;
 	.account-sign-in {
 		.button {
 			margin-right: .5em;
