--- a/assets/css/job-listings.less
+++ b/assets/css/job-listings.less
@@ -49,6 +49,17 @@ ul.job_listings {
 				vertical-align: middle;
 				box-shadow: none;
 			}
+			img.rectangular_company_logo {
+				width: 42px;
+				height: auto;
+				max-height: 80%;
+				position: absolute;
+				left: 1em;
+				float: left;
+				margin-right: 1em;
+				vertical-align: middle;
+				box-shadow: none;
+			}
 			div.position, div.location, ul.meta {
 				-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 				-moz-box-sizing: border-box;    /* Firefox, other Gecko */
