--- a/assets/css/frontend.scss
+++ b/assets/css/frontend.scss
@@ -2,14 +2,14 @@
 @use "icons";
 @use "job-listings";
 
-$primary: 			#999999; 									/* Primary colour for buttons (alt) */
-$primarytext: 		desaturate(lighten($primary,50%),18%);		/* Text on primary colour bg */
+$primary: 			#999; 									/* Primary colour for buttons (alt) */
+$primarytext: 		desaturate(lighten($primary, 50%), 18%);		/* Text on primary colour bg */
 
-$secondary: 		desaturate(lighten($primary,40%),18%);		/* Secondary buttons */
-$secondarytext:	 	desaturate(darken($secondary,60%),18%);		/* Text on secondary colour bg */
+$secondary: 		desaturate(lighten($primary, 40%), 18%);		/* Secondary buttons */
+$secondarytext:	 	desaturate(darken($secondary, 60%), 18%);		/* Text on secondary colour bg */
 
-$highlight: 		spin( $primary, 150 ); 						/* Prices, In stock labels, sales flash */
-$highlightext:		desaturate(lighten($highlight,50%),18%);	/* Text on highlight colour bg */
+$highlight: 		spin($primary, 150); 						/* Prices, In stock labels, sales flash */
+$highlightext:		desaturate(lighten($highlight, 50%), 18%);	/* Text on highlight colour bg */
 
 $contentbg: 		#fff; 										/* Content BG - Tabs (active state) */
 $subtext: 			#777; 										/* small, breadcrumbs etc */
@@ -35,18 +35,22 @@ $subtext: 			#777; 										/* small, breadcrumbs etc */
 
 /* =Global styles/layout
 -------------------------------------------------------------- */
-.job-manager-message, .job-manager-error, .job-manager-info {
+.job-manager-message,
+.job-manager-error,
+.job-manager-info {
 	padding: 1em 2em 1em 3.5em !important;
 	margin: 0 0 2em !important;
 	position: relative;
-	background-color: lighten($secondary,5%);
+	background-color: lighten($secondary, 5%);
 	color: $secondarytext;
 	border-top: 3px solid $primary;
 	list-style: none outside !important;
 	width: auto;
-	.clearfix;
-	box-shadow: 0 1px 1px rgba(0,0,0,0.2);
-	&:before {
+
+	@extend .clearfix;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+
+	&::before {
 		content: "";
 		font-family: sans-serif;
 		display: inline-block;
@@ -54,31 +58,38 @@ $subtext: 			#777; 										/* small, breadcrumbs etc */
 		top: 1em;
 		left: 1.5em;
 	}
+
 	li {
 		list-style: none outside !important;
 		padding-left: 0 !important;
 		margin-left: 0 !important;
 	}
+
 	&.job-manager-message {
 		border-top-color: #8fae1b;
-		&:before {
-			color:#8fae1b;
+
+		&::before {
+			color: #8fae1b;
 			content: "\2713";
 		}
 	}
+
 	&.job-manager-info {
 		border-top-color: #1e85be;
-		&:before {
-			color:#1e85be;
+
+		&::before {
+			color: #1e85be;
 			content: "i";
 			font-family: Times, Georgia, serif;
 			font-style: italic;
 		}
 	}
+
 	&.job-manager-error {
 		border-top-color: #b81c23;
-		&:before {
-			color:#b81c23;
+
+		&::before {
+			color: #b81c23;
 			content: "\00d7";
 			font-weight: 700;
 		}
@@ -86,49 +97,61 @@ $subtext: 			#777; 										/* small, breadcrumbs etc */
 }
 
 .job-manager-form {
+
 	fieldset {
 		margin: 0 0 1em 0;
 		padding: 0 0 1em 0;
 		line-height: 2em;
 		border: 0;
 		border-bottom: 1px solid #eee;
-		.clearfix;
+
+		@extend .clearfix;
+
 		label {
 			display: block;
 			margin: 0;
 			width: 29%;
 			float: left;
 			vertical-align: middle;
+
 			small {
-				opacity: .75;
+				opacity: 0.75;
 				font-size: 0.83em;
 			}
 		}
+
 		div.field {
 			width: 70%;
 			float: right;
 			vertical-align: middle;
 		}
+
 		.wp-editor-container {
 			border: 1px solid #ccc;
 			-webkit-border-radius: 3px;
 			-moz-border-radius: 3px;
 			border-radius: 3px;
 		}
+
 		.account-sign-in {
+
 			.button {
-				margin-right: .5em;
-				&:before {
-					.display-icon;
-					content: '\e808';
+				margin-right: 0.5em;
+
+				&::before {
+
+					@extend .display-icon;
+					content: "\e808";
 				}
 			}
 		}
+
 		abbr.required {
 			color: red;
 			font-weight: bold;
 			border: 0;
 		}
+
 		input.input-text,
 		input.input-date,
 		textarea,
@@ -140,65 +163,80 @@ $subtext: 			#777; 										/* small, breadcrumbs etc */
 			-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 			box-sizing: border-box;         /* Opera/IE 8+ */
 		}
+
 		small.description {
-			opacity: .75;
+			opacity: 0.75;
 			font-size: 0.83em;
 			margin: 1.2em 0 0 0;
 			display: block;
 			line-height: 1.2em;
 		}
+
 		.job-manager-uploaded-files {
 			display: table;
+
 			.job-manager-uploaded-file {
 				line-height: 2em;
 				font-style: italic;
 				margin-bottom: 1em;
 				display: block;
+
 				.job-manager-uploaded-file-preview {
+
 					img {
 						height: 64px;
 						margin: 0;
 						vertical-align: top;
 					}
+
 					a {
 						line-height: 64px;
 						display: inline-block;
 						padding: 0 0 0 1em;
 					}
 				}
+
 				.job-manager-uploaded-file-name {
 					display: block;
 				}
 			}
 		}
 	}
+
 	.submit-job {
 		padding: 1em 0;
 	}
+
 	.job-manager-term-checklist {
 		list-style: none outside;
 		max-height: 200px;
 		overflow: auto;
 		margin: 0;
+
 		li {
 			list-style: none outside;
 			margin: 0;
 			display: block;
 			float: none;
+
 			label {
 				width: auto;
 				float: none;
 			}
+
 			li {
 				margin: 0 0 0 2em;
 			}
 		}
 	}
-	input[type=submit]:disabled, input[type=submit].disabled {
-		opacity: .5;
+
+	input[type=submit]:disabled,
+	input[type=submit].disabled {
+		opacity: 0.5;
 		filter: alpha(opacity=50);
 		cursor: not-allowed;
 	}
+
 	.spinner {
 		background-repeat: no-repeat;
 		background-size: 20px 20px;
@@ -209,18 +247,22 @@ $subtext: 			#777; 										/* small, breadcrumbs etc */
 		margin: 0;
 		vertical-align: middle;
 	}
+
 	.spinner.is-active {
 		visibility: visible;
 	}
 }
+
 div.job_listings {
 	margin-bottom: 1em;
+
 	ul.job_listings {
 		margin: 0;
 	}
 }
 
 .single_job_listing {
+
 	.company {
 		position: relative;
 		border: 1px solid #eee;
@@ -229,7 +271,7 @@ div.job_listings {
 		display: block;
 		clear: both;
 		min-height: 3em;
-		box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 		box-sizing: content-box;
 
 		img {
@@ -241,15 +283,18 @@ div.job_listings {
 			vertical-align: middle;
 			box-shadow: none;
 		}
+
 		.name {
 			margin: 0 0 0 3em;
 			padding: 0 0 0 1em;
 			line-height: 1.5em;
+
 			a {
 				float: right;
 				margin-left: 1em;
 			}
 		}
+
 		.tagline {
 			display: block;
 			margin: 0 0 0 3em;
@@ -258,36 +303,43 @@ div.job_listings {
 			font-style: italic;
 			color: #999;
 		}
-		.website:before {
-			.display-icon;
-			content: '\e809';
+
+		.website::before {
+
+			@extend .display-icon;
+			content: "\e809";
 		}
-		.company_twitter:before {
-			.display-icon;
-			content: '\e80a';
+
+		.company_twitter::before {
+
+			@extend .display-icon;
+			content: "\e80a";
 		}
+
 		.company_video {
 			border-top: 1px solid #eee;
 			padding: 1em 0 0;
 			margin: 1em 0 0 0;
-    		position: relative;
-    		padding-bottom: 56.25%;
-    		padding-top: 30px;
-    		height: 0;
-    		overflow: hidden;
+			position: relative;
+			padding-bottom: 56.25%;
+			padding-top: 30px;
+			height: 0;
+			overflow: hidden;
+
 			iframe,
 			object,
 			embed {
-			    position: absolute;
-			    top: 0;
-			    left: 0;
-			    width: 100%;
-			    height: 100%;
-			    margin: 0;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				margin: 0;
 				display: block;
 			}
 		}
 	}
+
 	.meta {
 		list-style: none outside;
 		padding: 0;
@@ -295,97 +347,121 @@ div.job_listings {
 		overflow: hidden;
 		zoom: 1;
 		clear: both;
+
 		li {
 			margin: 0 1em 0 0;
-			padding: .5em;
+			padding: 0.5em;
 			float: left;
 			line-height: 1em;
 			color: #999;
 		}
+
 		.job-type {
 			color: #fff;
 			background-color: $part-time;
 		}
+
 		.full-time {
 			background-color: $full-time;
 		}
+
 		.part-time {
 			background-color: $part-time;
 		}
+
 		.temporary {
 			background-color: $temporary;
 		}
+
 		.freelance {
 			background-color: $freelance;
 		}
+
 		.internship {
 			background-color: $internship;
 		}
-		.position-filled, .listing-expired {
+
+		.position-filled,
+		.listing-expired {
 			color: #b81c23;
 		}
-		.location:before {
-			.display-icon;
-			content: '\e81d';
+
+		.location::before {
+
+			@extend .display-icon;
+			content: "\e81d";
 		}
-		.date-posted:before {
-			.display-icon;
-			content: '\e80f';
+
+		.date-posted::before {
+
+			@extend .display-icon;
+			content: "\e80f";
 		}
-		.position-filled:before, .listing-expired:before {
-			.display-icon;
-			content: '\e80e';
+
+		.position-filled::before,
+		.listing-expired::before {
+
+			@extend .display-icon;
+			content: "\e80e";
 		}
 	}
+
 	.job_description {
 		margin: 0 0 1.5em;
 	}
 }
+
 .job-manager-application-wrapper {
 	clear: both;
 	border: 1px solid #eee;
-	padding: .75em 1em 0;
+	padding: 0.75em 1em 0;
 	margin: 1em 0;
 	line-height: 1.5em;
 	display: block;
 	position: relative;
-	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
-.single_job_listing, .job-manager-application-wrapper {
+
+.single_job_listing,
+.job-manager-application-wrapper {
+
 	.application {
 		padding: 0;
 		margin: 0 0 1em;
 		overflow: hidden;
 
-		.application_button, .application_details {
+		.application_button,
+		.application_details {
 			-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 			-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 			box-sizing: border-box;         /* Opera/IE 8+ */
 		}
+
 		.application_button {
 			text-align: center;
 			font-size: 1.1em;
 			line-height: 1em;
 			display: inline-block;
-			margin: 0 .5em 0 0;
+			margin: 0 0.5em 0 0;
 			padding: 1/1.1em 2em;
 			outline: 0;
 		}
+
 		.application_details {
 			clear: both;
 			border: 1px solid #eee;
-			padding: .75em 1em 0;
+			padding: 0.75em 1em 0;
 			margin: 1em 0;
 			line-height: 1.5em;
 			display: block;
 			position: relative;
-			box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 
 			p {
-				margin: 0 0 .75em;
+				margin: 0 0 0.75em;
 			}
 
-			&:before {
+			&::before {
 				content: "";
 				position: absolute;
 				margin: -10px 0 0 0;
@@ -395,9 +471,10 @@ div.job_listings {
 				height: 0;
 				border-left: 10px solid transparent;
 				border-right: 10px solid transparent;
-				border-bottom:10px solid #eee;
+				border-bottom: 10px solid #eee;
 			}
-			&:after {
+
+			&::after {
 				content: "";
 				position: absolute;
 				margin: -9px 0 0 1px;
@@ -412,13 +489,17 @@ div.job_listings {
 		}
 	}
 }
+
 .job_filters {
 	background: #eee;
-	.clearfix;
+
+	@extend .clearfix;
 
 	.search_jobs {
 		padding: 1em;
-		.clearfix;
+
+		@extend .clearfix;
+
 		div {
 			-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 			-moz-box-sizing: border-box;    /* Firefox, other Gecko */
@@ -427,41 +508,54 @@ div.job_listings {
 			label {
 				display: none;
 			}
-			&.search_keywords, &.filter_first {
+
+			&.search_keywords,
+			&.filter_first {
 				float: left;
-				padding-right: .5em;
+				padding-right: 0.5em;
 				width: 50%;
 			}
-			&.search_location, &.filter_last {
+
+			&.search_location,
+			&.filter_last {
 				float: right;
-				padding-left: .5em;
+				padding-left: 0.5em;
 				width: 50%;
 			}
-			&.search_categories, &.filter_wide {
-				padding-top: .5em;
+
+			&.search_categories,
+			&.filter_wide {
+				padding-top: 0.5em;
 				clear: both;
 				width: 100%;
 			}
+
 			&.search_submit {
-				padding-top: .5em;
+				padding-top: 0.5em;
 			}
+
 			.showing_jobs {
+
 				a {
-					padding: .25em;
+					padding: 0.25em;
 				}
+
 				a.active {
 					background: #ddd;
 					text-decoration: none;
 				}
 			}
 		}
-		input, select {
+
+		input,
+		select {
 			-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 			-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 			box-sizing: border-box;         /* Opera/IE 8+ */
 			width: 100%;
 		}
 	}
+
 	.job_types {
 		list-style: none outside;
 		margin: 0;
@@ -469,10 +563,12 @@ div.job_listings {
 		font-size: 0.83em;
 		background: #f9f9f9;
 		border-top: 1px solid #e5e5e5;
-		.clearfix;
+
+		@extend .clearfix;
+
 		li {
 			margin: 0;
-			padding: .5em 1em;
+			padding: 0.5em 1em;
 			float: left;
 			border-right: 1px solid #eee;
 
@@ -483,7 +579,7 @@ div.job_listings {
 	}
 
 	.showing_jobs {
-		padding: .5em 1em;
+		padding: 0.5em 1em;
 		display: none;
 		font-size: 0.83em;
 		background: #f9f9f9;
@@ -496,7 +592,9 @@ div.job_listings {
 		}
 	}
 }
+
 div.job_listings {
+
 	.job-manager-pagination {
 		text-align: center;
 		display: block;
@@ -504,52 +602,66 @@ div.job_listings {
 		border-bottom: 1px solid #eee;
 		line-height: 1;
 	}
+
 	.load_previous {
 		border-top: 1px solid #eee;
 	}
+
 	.load_more_jobs + ul.job_listings {
 		border-top: 0;
 	}
+
 	.load_more_jobs {
 		text-align: center;
 		display: block;
 		padding: 1em 1em 1em 2em;
 		border-bottom: 1px solid #eee;
 		font-weight: bold;
+
 		&.loading {
 			background: url(../images/ajax-loader.gif) no-repeat center;
+
 			strong {
 				visibility: hidden;
 			}
 		}
-		&:hover, &:focus {
+
+		&:hover,
+		&:focus {
 			background-color: #fcfcfc;
 			border-bottom: 1px solid #eee;
 		}
 	}
 }
+
 .job_listing_preview {
 	padding: 0 1em 1em;
 	border: 5px solid #eee;
 }
+
 .single-job_listing .entry-header .attachment-post-thumbnail,
 .single-job_listing .job_listing.has-post-thumbnail .post-thumbnail {
 	display: none;
 }
-.job_listing_preview_title, .entry-content .job_listing_preview_title {
-	padding: .5em 1em;
+
+.job_listing_preview_title,
+.entry-content .job_listing_preview_title {
+	padding: 0.5em 1em;
 	vertical-align: middle;
 	position: relative;
 	background: #eee;
+
 	h2 {
 		margin: 0;
 		clear: none;
 	}
+
 	.button {
 		float: right;
-		margin-left: .25em;
+		margin-left: 0.25em;
 	}
 }
+
 .job_summary_shortcode {
 	border: 1px solid #ccc;
 	-moz-border-radius: 4px;
@@ -557,7 +669,7 @@ div.job_listings {
 	border-radius: 4px;
 	text-align: center;
 	position: relative;
-	box-shadow: 0 2px 4px rgba(0,0,0,0.1),inset 0 1px 0 rgba(255,255,255,0.4);
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.4);
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
@@ -596,7 +708,7 @@ div.job_listings {
 		border-radius: 0;
 		border-top-left-radius: 3px;
 		border-top-right-radius: 3px;
-		box-shadow: inset 0 1px 0 rgba(255,255,255,0.4);
+		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4);
 	}
 
 	.job_summary_content {
@@ -613,12 +725,12 @@ div.job_listings {
 		-webkit-border-radius: 1em;
 		border-radius: 1em;
 		color: #fff;
-		text-shadow: 0 1px 0 rgba(255,255,255,0.5);
-		box-shadow: 0 2px 4px rgba(0,0,0,0.1), inset 0 1px 0 rgba(255,255,255,0.4);
+		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.4);
 		position: absolute;
 		top: 0;
 		right: 0;
-		padding: .5em;
+		padding: 0.5em;
 		height: 1em;
 		width: auto;
 		min-width: 1em;
@@ -626,20 +738,24 @@ div.job_listings {
 		text-align: center;
 		vertical-align: middle;
 		line-height: 1em;
-		margin: -.5em -.5em 0 0;
+		margin: -0.5em -0.5em 0 0;
 
 		&.full-time {
 			background-color: $full-time;
 		}
+
 		&.part-time {
 			background-color: $part-time;
 		}
+
 		&.temporary {
 			background-color: $temporary;
 		}
+
 		&.freelance {
 			background-color: $freelance;
 		}
+
 		&.internship {
 			background-color: $internship;
 		}
@@ -647,73 +763,97 @@ div.job_listings {
 }
 
 #job-manager-job-dashboard {
+
 	.account-sign-in {
+
 		.button {
-			margin-right: .5em;
-			&:before {
-				.display-icon;
-				content: '\e808';
+			margin-right: 0.5em;
+
+			&::before {
+
+				@extend .display-icon;
+				content: "\e808";
 			}
 		}
 	}
+
 	table {
+
 		ul.job-dashboard-actions {
 			margin: 0;
-			padding:0;
+			padding: 0;
 			visibility: hidden;
 			font-size: 0.92em;
+
 			li {
 				float: none;
 				display: inline;
 				padding: 0;
-				margin: 0 .5em 0 0;
+				margin: 0 0.5em 0 0;
 				font-weight: normal;
 				list-style: none outside;
 
-				&:after {
-					padding: 0 0 0 .5em;
+				&::after {
+					padding: 0 0 0 0.5em;
 					content: "\2023";
 				}
-				&:last-child:after {
-					content: '';
+
+				&:last-child::after {
+					content: "";
 				}
+
 				.job-dashboard-action-delete {
 					color: red;
 				}
 			}
 		}
-		tr:hover, tr:focus {
+
+		tr:hover,
+		tr:focus {
+
 			ul.job-dashboard-actions {
 				visibility: visible;
 			}
 		}
-		td, th {
-			padding: .5em 1em .5em 0;
+
+		td,
+		th {
+			padding: 0.5em 1em 0.5em 0;
 		}
+
 		.job_title small {
 			color: #999;
 		}
+
 		.featured-job-icon {
-			&:before {
-				content: '\e803';
-				.jm-icon;
+
+			&::before {
+
+				@extend .jm-icon;
+				content: "\e803";
 			}
 		}
-		.filled, .expires, .applications {
+
+		.filled,
+		.expires,
+		.applications {
 			text-align: center;
 		}
 	}
 }
 
-nav.job-manager-pagination, #content nav.job-manager-pagination {
+nav.job-manager-pagination,
+#content nav.job-manager-pagination {
 	text-align: center;
+
 	ul {
 		display: inline-block;
 		white-space: nowrap;
-		padding:0;
+		padding: 0;
 		clear: both;
 		border-left: 1px solid #eee;
 		margin: 1px;
+
 		li {
 			border-right: 1px solid #eee;
 			border-top: 1px solid #eee;
@@ -723,21 +863,26 @@ nav.job-manager-pagination, #content nav.job-manager-pagination {
 			float: left;
 			display: inline;
 			overflow: hidden;
-			a, span {
+
+			a,
+			span {
 				margin: 0;
 				text-decoration: none;
 				padding: 0;
 				line-height: 1em;
 				font-size: 1em;
 				font-weight: normal;
-				padding: .5em;
+				padding: 0.5em;
 				min-width: 1em;
 				display: block;
 				border: 0;
 			}
-			span.current, a:hover, a:focus {
+
+			span.current,
+			a:hover,
+			a:focus {
 				background: #eee;
-				color: darken( #eee, 40 );
+				color: darken(#eee, 40);
 			}
 		}
 	}
@@ -750,27 +895,38 @@ nav.job-manager-pagination, #content nav.job-manager-pagination {
 
 // Default theme fixes
 .twenty-ten {
-	.job_types, .chosen-choices {
+
+	.job_types,
+	.chosen-choices {
 		margin: 0 !important;
 	}
 }
 
 .rtl {
+
 	.job-manager-form {
+
 		label {
 			float: right;
 		}
+
 		div.field {
 			float: left;
 		}
 	}
-	.job_listing_preview_title, .entry-content .job_listing_preview_title {
+
+	.job_listing_preview_title,
+	.entry-content .job_listing_preview_title {
+
 		.button {
 			float: left;
 		}
 	}
+
 	.single_job_listing {
+
 		.meta {
+
 			li {
 				float: right;
 				margin: 0 0 0 1em;
