--- a/assets/css/menu.scss
+++ b/assets/css/menu.scss
@@ -2,16 +2,22 @@
 
 /* Menu */
 #adminmenu {
+
 	#menu-posts-job_listing {
-		.wp-menu-image:before {
-			content: '\e800';
-			.jm-icon;
+
+		.wp-menu-image::before {
+
+			@extend .jm-icon;
+			content: "\e800";
 		}
 	}
+
 	#menu-posts-resume {
-		.wp-menu-image:before {
-			content: '\e806';
-			.jm-icon;
+
+		.wp-menu-image::before {
+
+			@extend .jm-icon;
+			content: "\e806";
 		}
 	}
 }
