--- a/assets/css/icons.scss
+++ b/assets/css/icons.scss
@@ -22,7 +22,7 @@
 	font-style: normal;
 }
 
-.jm-icon {
+@mixin jm-icon() {
 	font-family: job-manager !important;
 	font-style: normal;
 	font-weight: normal;
