--- a/assets/css/mixins.scss
+++ b/assets/css/mixins.scss
@@ -4,7 +4,7 @@ $internship: #6033cc;
 $freelance: #39c;
 $temporary: #d93674;
 
-.clearfix {
+@mixin clearfix() {
 	zoom: 1; /* For IE 6/7 (trigger hasLayout) */
 
 	&::before,
@@ -18,18 +18,8 @@ $temporary: #d93674;
 	}
 }
 
-@mixin clearfix() {
-	zoom: 1; /* For IE 6/7 (trigger hasLayout) */
-
-	&::before,
-	&::after {
-		content: "";
-		display: table;
-	}
-
-	&::after {
-		clear: both;
-	}
+.clearfix {
+	@include clearfix();
 }
 
 @mixin border_radius($radius:4px) {
