Add backwards compatibility for .display-icon

--- a/assets/css/frontend.scss
+++ b/assets/css/frontend.scss
@@ -33,6 +33,10 @@ $subtext: 			#777; 										/* small, breadcrumbs etc */
 	*display: inline;
 }
 
+.display-icon {
+	@include display-icon();
+}
+
 /* =Global styles/layout
 -------------------------------------------------------------- */
 .job-manager-message,
