--- a/assets/css/frontend.scss
+++ b/assets/css/frontend.scss
@@ -448,7 +448,7 @@ div.job_listings {
 			line-height: 1em;
 			display: inline-block;
 			margin: 0 0.5em 0 0;
-			padding: 1/1.1em 2em;
+			padding: 1em 2em;
 			outline: 0;
 		}
 
