--- a/assets/css/frontend.scss
+++ b/assets/css/frontend.scss
@@ -409,6 +409,11 @@ div.job_listings {
 			@include display-icon();
 			content: "\e80e";
 		}
+
+		.salary:before {
+			.display-icon;
+			content: '\e800';
+		}
 	}
 
 	.job_description {
