Customize notice style in the new design for the Licenses page for WPJM addons

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -79,6 +79,10 @@ a.wpjm-activate-licence-link:active {
 		width: 100%;
 		max-width: 140px;
 	}
+	.plugin-licence-notice {
+		width: 100%;
+		margin: 0 12px 14px 24px;
+	}
 }
 
 .wpjm-bulk-activate {
