--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -93,7 +93,6 @@ a.wpjm-activate-licence-link:active {
 	min-height: 82px;
 	flex-direction: column;
 	padding: 10px 0;
-	margin-bottom: 20px;
 
 	&--title {
 		font-weight: bold;
@@ -126,6 +125,25 @@ a.wpjm-activate-licence-link:active {
 	&--notice {
 		width: calc(100% - 20px);
 		box-sizing: border-box;
+	}
+}
+
+.plugin-licence-search {
+	width: 100%;
+	margin: 18px 0;
+	display: flex;
+	justify-content: end;
+	min-height: 40px;
+	.plugin-licence-search-field {
+		max-width: 180px;
+		width: 100%;
+		min-height: 40px;
+		margin-right: 3px;
+	}
+	.plugin-licence-search-button {
+		min-height: 40px;
+		max-width: 75px;
+		width: 100%;
 	}
 }
 
