Implement new logic to move first license section appropriately

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -152,7 +152,7 @@ a.wpjm-activate-licence-link:active {
 	line-height: 16px;
 	font-weight: 700;
 	margin: 18px 0;
-	&--active {
+	&--first {
 		margin-top: -36px;
 	}
 }
