Make input field for the bulk activation input field red when there's an error notice

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -132,6 +132,10 @@ a.wpjm-activate-licence-link:active {
 		width: 100%;
 	}
 
+	&--field-error {
+		border: 1px solid #CC1818 !important;
+	}
+
 	&--field, &--button {
 		height: 40px;
 	}
