Apply background colors from gutenberg in the notices in the bulk activation section

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -146,6 +146,19 @@ a.wpjm-activate-licence-link:active {
 	&--notice {
 		width: calc(100% - 20px);
 		box-sizing: border-box;
+		// Apply background colors from gutenberg notices in the HTML for each notice type
+		&.notice-error {
+			background-color: #F4A2A2;
+		}
+		&.notice-warning {
+			background-color: #FEF8EE;
+		}
+		&.notice-success {
+			background-color: #EFF9F1;
+		}
+		&.notice-info {
+			background-color: #FFF;
+		}
 	}
 }
 
