Fix list item margin

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -50,6 +50,7 @@ promote-job-modal {
 		font-size: 14px;
 		list-style: none;
 		padding-left: 32px;
+		margin: 12px 0;
 	}
 	.promote-job-modal-price {
 		display: flex;
