Update promote-jobs-dialog class

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -86,7 +86,7 @@ promote-job-modal {
 		padding: 0px 25px 25px;
 	}
 }
-.promoteJobsDialog {
+.promote-jobs-dialog {
 	border: 0;
 	border-radius: 8px;
 	form {
