--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -22,10 +22,10 @@ promote-job-modal {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 	padding: 30px 80px 50px 80px;
-	img {
+	img.promote-jobs-image {
 		width: 100%;
 	}
-	h2 {
+	h2.promote-jobs-heading {
 		font-size: 36px;
 		font-weight: 300;
 		line-height: 105%;
@@ -37,15 +37,8 @@ promote-job-modal {
 		display: flex;
 		justify-content: space-between;
 		flex-direction: column;
-
-		button {
-			padding: 16px 10px;
-		}
 	}
-	ul {
-		margin: 24px 0;
-	}
-	li {
+	li.promote-list-item {
 		background: url("data:image/svg+xml,<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><mask id=\"mask0_20018663_2259\" style=\"mask-type:luminance\" maskUnits=\"userSpaceOnUse\" x=\"3\" y=\"5\" width=\"18\" height=\"14\"><path d=\"M8.75685 15.9L4.57746 11.7L3.18433 13.1L8.75685 18.7L20.698 6.69999L19.3049 5.29999L8.75685 15.9Z\" fill=\"white\"/></mask><g mask=\"url%28%23mask0_20018663_2259%29\"><rect width=\"23.8823\" height=\"24\" fill=\"%232270B1\"/></g></svg>") no-repeat 0 -3px;
 		font-size: 14px;
 		list-style: none;
@@ -89,9 +82,9 @@ promote-job-modal {
 .promote-jobs-dialog {
 	border: 0;
 	border-radius: 8px;
-	form {
+	form.dialog {
 		display: flex;
-		button {
+		button.dialog-close {
 			margin: 10px 15px auto auto;
 			content: '';
 			background: none;
