--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -79,7 +79,7 @@ promote-job-modal {
 		padding: 0px 25px 25px;
 	}
 }
-.promote-jobs-dialog {
+.wpjm-dialog {
 	border: 0;
 	border-radius: 8px;
 	form.dialog {
