Add styles for deactivate modal

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -27,9 +27,7 @@ promote-job-modal {
 	}
 	h2.promote-jobs-heading {
 		font-size: 36px;
-		font-weight: 300;
 		line-height: 105%;
-		margin-top: 0;
 		width: 80%;
 		margin-bottom: 0px;
 	}
@@ -59,15 +57,6 @@ promote-job-modal {
 			font-weight: 700;
 		}
 	}
-	.promote-buttons-group {
-		.button {
-			padding: 5px 16px;
-			margin-right: 18px;
-		}
-		.button-secondary {
-			background: #ffffff;
-		}
-	}
 }
 @media screen and ( max-width: 1000px ) {
 	.promote-job-modal-column-right {
@@ -82,6 +71,10 @@ promote-job-modal {
 .wpjm-dialog {
 	border: 0;
 	border-radius: 8px;
+	h2.promote-jobs-heading {
+		margin-top: 0;
+		font-weight: 300;
+	}
 	form.dialog {
 		display: flex;
 		button.dialog-close {
@@ -98,6 +91,44 @@ promote-job-modal {
 	}
 	&::backdrop {
 		background: rgba(0, 0, 0, 0.5);
+	}
+	.promote-buttons-group {
+		.button {
+			padding: 5px 16px;
+			margin-right: 18px;
+		}
+		.button-secondary {
+			background: #ffffff;
+		}
+	}
+}
+/** Deactivate Modal **/
+#deactivate-dialog {
+	h2 {
+		font-size: 20px;
+		line-height: 28px;
+	}
+	max-width: 415px;
+	padding: 32px;
+	form {
+		display: block;
+		float: right;
+		button {
+			margin: 0 0 0 10px;
+		}
+	}
+	p {
+		margin: 40px 0;
+	}
+	.promote-buttons-group {
+		display: block;
+		float: right;
+		.button-secondary {
+			border: 0;
+		}
+		button:last-child {
+			margin-right: 0;
+		}
 	}
 }
 
