Add cursor:pointer to dialog close button

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -34,6 +34,7 @@ a.wpjm-activate-licence-link:active {
 	form.dialog {
 		display: flex;
 		button.dialog-close {
+			cursor: pointer;
 			margin: 10px 15px auto auto;
 			content: '';
 			background: none;
