Update job-manager font to include custom new WPJM icon

--- a/assets/font/job-manager-codes.css
+++ b/assets/font/job-manager-codes.css
@@ -47,3 +47,4 @@
 .icon-block:before { content: '\e82d'; } /* '' */
 .icon-cancel-circled:before { content: '\e82e'; } /* '' */
 .icon-ok-circled:before { content: '\e82f'; } /* '' */
+.icon-wpjm:before { content: '\e830'; } /* '' */
